crates/doodle-core/tests/snapshots/diag_render__single_line_error_with_caret_and_suggestion.snap
---
source: crates/doodle-core/tests/diag_render.rs
expression: "render_diagnostic(&d, &view(\"playground.doodle\", source))"
---
error[chained-comparison]: comparison operators don't chain
  --> playground.doodle:2:7
2 |   if (a < b < c) then
  |       ^^^^^^^^^
  = help: write `a < b and b < c` instead
